Fix play button layout bug in Vimeo component on Firefox

--- a/packages/astro-embed-vimeo/Vimeo.css
+++ b/packages/astro-embed-vimeo/Vimeo.css
@@ -30,6 +30,7 @@ lite-vimeo > .ltv-playbtn {
 	content: '';
 	position: absolute;
 	inset: 0;
+	width: 100%;
 	background: transparent;
 	outline: 0;
 	border: 0;
